[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatiotemporal-mapping"
version = "0.1.0"
description = "Plots spatiotemporal VOC data on a map for quick source identification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "Maria Carter", email = "maria.carter@colorado.edu"},
]
dependencies = [
    "numpy >= 1.22",
    "matplotlib >= 3.5",
    "pandas >= 2.0.0",
    "icartt >= 2.0.0",
    "plotly >= 6.0.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
run-spatiotemporal-analysis = "spatiotemporal_analysis.spatiotemporal_mapping_analysis:main"

